--- a/.gitignore
+++ b/.gitignore
@@ -371,5 +371,7 @@ Temporary Items
 !.vscode/launch.json
 !.vscode/extensions.json
 
+data.json
+
 
 # End of https://www.gitignore.io/api/macos,csharp,visualstudiocode
