--- a/MemberRegistry.csproj
+++ b/MemberRegistry.csproj
@@ -3,9 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <RuntimeIdentifiers>osx-x64;win7-x64;win10-x64;ubuntu-x64</RuntimeIdentifiers>
+    <TrimUnusedDependencies>true</TrimUnusedDependencies>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Packaging.Tools.Trimming" Version="1.1.0-preview1-25818-01" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <None Update="data.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
